resized images, added image buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /* Apply a general styling to the body for a nice background */
 body {
   font-family: 'Arial', sans-serif;
